# SqlO2

./: .gitignore  3rdpartylicenses.txt  5-es2015.22607e10de84a8291903.js  5-es2015.65c968b07c51c3275065.js  5-es5.22607e10de84a8291903.js  5-es5.65c968b07c51c3275065.js  Cargo.toml  bench_flamegraph.sh  index-9a08168d5f47d985.js  index-9a08168d5f47d985_bg.wasm  index-a18bbfd378cf0d6d.js  index-a18bbfd378cf0d6d_bg.wasm  index-aa7052be8976b8dd.js  index.html  main-es2015.1f64d99def92ac8fdd40.js  main-es2015.4e236ba586acb77d7923.js  main-es2015.70719e88dd8d780c98bf.js  main-es2015.744984f4644f86218784.js  main-es2015.866b8351a2312e10f308.js  main-es2015.8a504c75b634233d5884.js  main-es2015.8b6f5d1acf41688468ae.js  main-es2015.a9a0c18fa59fba592384.js  main-es2015.cc2493a50dd7d3ee0909.js  main-es2015.ed5d864486575ea5ea89.js  main-es5.1f64d99def92ac8fdd40.js  main-es5.4e236ba586acb77d7923.js  main-es5.70719e88dd8d780c98bf.js  main-es5.744984f4644f86218784.js  main-es5.866b8351a2312e10f308.js  main-es5.8a504c75b634233d5884.js  main-es5.8b6f5d1acf41688468ae.js  main-es5.a9a0c18fa59fba592384.js  main-es5.cc2493a50dd7d3ee0909.js  main-es5.ed5d864486575ea5ea89.js  runtime-es2015.0f30c172c91d37058937.js  runtime-es2015.1bca5f3f7fa57ab3a09b.js  runtime-es2015.2fd570cc4df63d9f60c5.js  runtime-es2015.381757b4cfbce45d5861.js  runtime-es2015.437aaa53389195cf121b.js  runtime-es2015.5c48047444762a1d9c3c.js  (+26 more)
.github/workflows/: build-deploy.yml  test.yml
benchmarks/: Cargo.toml
benchmarks/benches/: bench_main.rs
benchmarks/src/: lib.rs
docs/: 3rdpartylicenses.txt  5-es2015.5a56175f21c62a124730.js  5-es2015.6a1be7b9ccb111941883.js  5-es5.6a1be7b9ccb111941883.js  5-es5.e16056c7b85800fe6029.js  index.html  main-es2015.1a92183ea7c306699224.js  main-es2015.29efe9a80b760b85b62a.js  main-es2015.418563128f341fbe3891.js  main-es2015.91692ad3b58e3dc864ad.js  main-es2015.a74a2b593ff48599b3da.js  main-es2015.b5f3e5b4812a79f80180.js  main-es2015.bbe7471496653210e12e.js  main-es5.1a92183ea7c306699224.js  main-es5.29efe9a80b760b85b62a.js  main-es5.418563128f341fbe3891.js  main-es5.91692ad3b58e3dc864ad.js  main-es5.a74a2b593ff48599b3da.js  main-es5.bbe7471496653210e12e.js  runtime-es2015.32cacd08d9bbdfdc0038.js  runtime-es2015.64570df21d56b3f214ff.js  runtime-es2015.706b795e7a86e8feb2fe.js  runtime-es2015.9821fd6a2de892105bb0.js  runtime-es2015.ac869591daf5361f2c56.js  runtime-es2015.c44858ea515b3f5a6c63.js  runtime-es2015.f6a4bc754005f8bc8eef.js  runtime-es5.32cacd08d9bbdfdc0038.js  runtime-es5.64570df21d56b3f214ff.js  runtime-es5.706b795e7a86e8feb2fe.js  runtime-es5.9821fd6a2de892105bb0.js  runtime-es5.ac869591daf5361f2c56.js  runtime-es5.f6a4bc754005f8bc8eef.js  styles.b41132c93b4348e29746.css  styles.f490928c4311503c5212.css
docs/postgrustql-ng-repl/: index.html  main-es5.b5f3e5b4812a79f80180.js  runtime-es2015.c385a119a41a5a9924fc.js  runtime-es5.c385a119a41a5a9924fc.js  runtime-es5.c44858ea515b3f5a6c63.js  styles.09fc3ea03aff1218684d.css
engine/: Cargo.toml
engine/src/: ast.rs  backend.rs  lib.rs  parser.rs
engine/src/backend_memory/: memory_store.rs  mod.rs
engine/src/lexer/: mod.rs
engine/src/parser/: column_definitions.rs  create_index.rs  create_table.rs  drop_table.rs  expression.rs  expressions.rs  insert.rs  joins.rs  literal.rs  mod.rs  select.rs  select_items.rs  statement.rs  table.rs  table_column.rs  tables.rs
engine/src/sql_types/: mod.rs
engine/src/test_impls/: mod.rs
ng-repl/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
ng-repl/e2e/src/: app.e2e-spec.ts
ng-repl/src/: index.html
ng-repl/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts
postgrustql/: Cargo.toml
postgrustql-ng-repl/: README.md  package-lock.json  package.json
postgrustql-ng-repl/src/: index.html  styles.scss
postgrustql-ng-repl/src/app/: app.component.spec.ts  app.component.ts  app.module.ts
postgrustql/src/: ast.rs  backend.rs  backend_memory.rs  lexer.rs  lib.rs  parser.rs  repl.rs
postgrustql/src/backend_memory/: mod.rs
postgrustql/src/lexer/: mod.rs
postgrustql/src/parser/: mod.rs
postgrustql/src/sql_types/: mod.rs
postgrustql_benchmarks/: Cargo.toml
postgrustql_benchmarks/benches/: bench_main.rs
postgrustql_repl/: Cargo.toml
postgrustql_repl/src/: main.rs
postgrustql_wasm_client/: Cargo.toml
postgrustql_wasm_client/src/: lib.rs
repl/: Cargo.toml
repl/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
src/lib/: backend.rs  backend_memory.rs  lexer.rs  mod.rs  parser.rs  repl.rs
src/temp/: ast.go  fgo.mod  lexer.go  main.go  memory_backend.go  parser.go
src/tests/: lexer_test.rs  parser_test.rs
test-macros/: Cargo.toml
test-macros/src/: lib.rs
test-test/: Cargo.toml
test-test/src/: main.rs
test-util/: Cargo.toml
test-util/src/: impls.rs  lib.rs
test_test/: Cargo.toml
test_test/src/: main.rs
tests/: Cargo.toml
tests/acceptance/memory/: operation_order_1  operation_order_1.sql  query1  query1.sql  query2  query3.sql  test.toml
tests/acceptance/memory1/: query1  query2  query2.sql  query3  test.toml
tests/integration/test1/: test.toml
tests/src/: lib.rs
tests/unit/parser1/: query1  query1.sql  query2  test.toml
tests/unit/parser2/: query1  query1.sql  query1.target  test.toml
transactional-store/: Cargo.toml
transactional-store/benches/: bench.rs
transactional-store/src/: lib.rs
wasm-client/src/: lib.rs
wasm-repl/: Cargo.toml  index.html  main.css
wasm-repl/src/: main.rs
wasm-repl/src/components/: app.rs  mod.rs  repl.rs  results_table.rs
wasm-repl/src/services/: mod.rs  sqlo2_service.rs
wasm_client/: Cargo.toml
wasm_client/src/: lib.rs
wasm_repl/: Cargo.toml  index.html  main.css
wasm_repl/src/: main.rs
wasm_repl/src/components/: mod.rs  repl.rs  results_table.rs
wasm_repl/src/services/: mod.rs  sqlo2_service.rs
wire-protocol/: Cargo.toml
wire-protocol/src/: lib.rs
wire-protocol/src/messages/: mod.rs
wire_protocol/: Cargo.toml
wire_protocol/src/: lib.rs
wire_protocol/src/messages/: mod.rs
(+15 files in other folders)
