[workspace]

members = [
    "engine",
    "benchmarks",
    "repl",
    "server",
    "test-macros",
    "test-test",
    "test-util",
    "tests",
    "wasm-repl",
    "wire-protocol"
]

[profile.bench]
debug = true
lto = "thin"

[profile.test]
debug = true

[profile.release]
debug = false
lto = "thin"
