[workspace]

members = [
    "engine",
    "benchmarks",
    "repl",
    "server",
    "test-macros",
    "test-test",
    "test-util",
    "tests",
    "transactional-store",
    "wasm-repl",
    "wire-protocol"
]

[profile.bench]
debug = true
lto = "thin"

[profile.test]
debug = true

[profile.release]
debug = false
lto = "thin"

[patch."https://github.com/Axmouth/tree-display-rs"]
tree-display = { path = "../tree-display/tree-display" }