[package]
name = "postgrustql_benchmarks"
version = "0.1.0"
authors = ["Axmouth <aggronfg@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgrustql = { path = "../engine" }
criterion = "0.3"
instant = { version = "0.1", features = [ "now" ] }

[[bench]]
name = "bench_main"
harness = false

[profile.release]
debug = true