[package]
name = "sqlo2_benchmarks"
version = "0.1.0"
authors = ["Axmouth <aggronfg@yahoo.com>"]
edition = "2021"

[dependencies]
sqlo2 = { path = "../engine" }
transactional-store = { path = "../transactional-store" }
criterion = "=0.3"
instant = { version = "=0.1", features = [ "now" ] }
alloc_counter = "=0.0.4"
sysinfo = "=0.24.7"


[[bench]]
name = "bench_main"
harness = false