[package]
name = "sqlo2"
version = "0.1.0"
authors = ["Axmouth <aggronfg@yahoo.com>"]
edition = "2021"

[features]
default = []
stdweb = [ "instant/stdweb" ]
wasm-bindgen = [ "instant/wasm-bindgen" ]
wasm = ["stdweb", "wasm-bindgen"]

[dependencies]
byteorder = "=1.4.3"
bytes = "=1.1.0"
regex  = "=1.5.5"
lazy_static = "=1.4.0"
instant = { version = "=0.1.12", features = [ "now" ] }
serde = { version = "=1.0.136", features = ["derive"] }
jemallocator = {version = "=0.3.2", optional = true }
mimalloc = { version = "=0.1.27", default-features = false, optional = true }
alloc_counter = {version = "=0.0.4", optional = true }
test-util = { path = "../test-util" }

[dev-dependencies]
pretty_assertions = "=1.0.0"
test-macros = { path = "../test-macros" }