[package]
name = "sqlo2"
version = "0.1.0"
authors = ["Axmouth <aggronfg@yahoo.com>"]
edition = "2021"

[features]
default = []
stdweb = [ "instant/stdweb" ]
wasm-bindgen = [ "instant/wasm-bindgen" ]
wasm = ["stdweb", "wasm-bindgen"]

[dependencies]
byteorder = "=1.4.3"
bytes = "=1.2.0"
regex  = "=1.6.0"
lazy_static = "=1.4.0"
instant = { version = "=0.1.12", features = [ "now" ] }
serde = { version = "=1.0.140", features = ["derive"] }
mimalloc = { version = "=0.1.29", default-features = false, optional = true }
alloc_counter = {version = "=0.0.4", optional = true }
test-util = { path = "../test-util" }
tree-display = { git = "https://github.com/Axmouth/tree-display-rs", branch = "main" }

[dev-dependencies]
pretty_assertions = "=1.2.1"
test-macros = { path = "../test-macros" }