[package]
name = "postgrustql"
version = "0.1.0"
authors = ["Axmouth <aggronfg@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
stdweb = [ "instant/stdweb" ]
wasm-bindgen = [ "instant/wasm-bindgen" ]

[dependencies]
byteorder = "1"
bytes = "0.6"
futures = "0.3"
regex  = "1.4"
lazy_static = "1.4"
instant = { version = "0.1", features = [ "now" ] }