[package]
name = "postgrustql_benchmarks"
version = "0.1.0"
authors = ["Axmouth <aggronfg@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgrustql = { path = "../postgrustql" }
criterion = "0.3"

[[bench]]
name = "bench_main"
harness = false

[profile.release]
debug = true