[package]
name = "postgrustql_repl"
version = "0.1.0"
authors = ["Axmouth <aggronfg@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2" }
postgrustql = { path = "../postgrustql" }
prettytable-rs = "^0.8"
rustyline = "6.2.0"