[package]
name = "postgrustql_repl"
version = "0.1.0"
authors = ["Axmouth <aggronfg@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgrustql = { path = "../postgrustql" }
prettytable-rs = "^0.8"
rustyline = "8.2.0"