[package]
name = "postgrustql_wasm_client"
version = "0.1.0"
authors = ["Axmouth <aggronfg@yahoo.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
postgrustql = { path = "../postgrustql", features = ["stdweb", "wasm-bindgen"] }
postgrustql_repl = { path = "../postgrustql_repl" }
lazy_static = "1.4"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"