[package]
name = "sqlo2_repl"
version = "0.1.0"
authors = ["Axmouth <aggronfg@yahoo.com>"]
edition = "2021"

[dependencies]
sqlo2 = { path = "../engine" }
prettytable-rs = "=0.8.0"
rustc_version_runtime = "=0.2"
rustyline = "=10.0.0"
rustyline-derive = "0.7.0"
colored = "=2.0.0"
sysinfo = "=0.24.7"
termcolor = "=1.1.3"