[package]
name = "transactional-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
parking_lot = "0.12.1"
tokio = { version = "1.21.2", features = ["sync"] }

criterion = "0.4.0"
instant = "0.1.12"
rand = "0.8.4"

[dev-dependencies]
test-case = "2.2.2"

[[bench]]
name = "bench"
harness = false