[package]
name = "sqlo2_wasm-repl"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlo2 = { path = "../engine", features = ["stdweb", "wasm-bindgen"] }

yew = "=0.19.3"
yew-router = "=0.16.0"
lazy_static = "=1.4.0"
serde = "=1.0.140"
serde_qs = "=0.10.1"
wasm-bindgen = { version = "=0.2.81", features = ["serde-serialize"] }
wasm-logger = "=0.2.0"
web-sys = { version = "=0.3.58", features = ["HtmlTextAreaElement"] }
log = "=0.4.17"
