[package]
name = "postgrustql_wasm_repl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
postgrustql = { path = "../engine", features = ["stdweb", "wasm-bindgen"] }
postgrustql_repl = { path = "../repl" }