[package]
name = "sqlo2_wasm_repl"
version = "0.1.0"
edition = "2018"

[dependencies]
yew = "0.18"
lazy_static = "1"
sqlo2 = { path = "../engine", features = ["stdweb", "wasm-bindgen"] }
sqlo2_repl = { path = "../repl" }

strum = "0.21"
strum_macros = "0.21"
serde = "1"
serde_derive = "1"
gloo = "0.3"